--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="stylesheet" href="%PUBLIC_URL%/css/reset.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React 0719</title>
+  <title>redux</title>
 </head>
 
 <body>
